--- a/dvoinoi/_layouts/default.html
+++ b/dvoinoi/_layouts/default.html
@@ -1,1 +1,34 @@
-{{ content }}
+
+<!DOCTYPE html>
+<html>
+<head>
+   <title>D V O I N O I :: Home</title>
+   <meta name="description" content="We are Techno! Dvoinoi is a live electronic band, Cinematic Minimal Techno">
+   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js" type="text/javascript"></script>
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="/assets/css/main.css">
+</head>
+<body>
+   <div id="wrapper">
+      <header>
+         <h1>Dvoinoi</h1>
+         <h2>SYMPHONIC PUNK COUNTRY DISCO</h2>
+         <p>
+            <a href="https://soundcloud.com/dvoinoi/">soundcloud</a> |
+            <a href="https://dvoinoi.bandcamp.com/">bandcamp</a> |
+            <a href="/live">live</a> |
+            <a href="/contact">contact</a>
+         </p>
+      </header>
+      <main>
+         <div class="flash">
+                     </div>
+         <div class="content">
+            <section class="home-page">
+               {{ content }}
+            </section>
+         </div>
+      </main>
+   </div>
+</body>
+</html>
