--- a/main.css
+++ b/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Codystar|Source+Code+Pro);
+@import url("//fonts.googleapis.com/css?family=Codystar|Source+Code+Pro");
 *{color: #000; font-family:arial; font-weight:normal;}
 
 body,html{margin:0;padding:0;}
