--- a/css/main.css
+++ b/css/main.css
@@ -8,10 +8,12 @@ header h1 {text-transform: uppercase;color: white;font-weight: lighter;letter-sp
 header h2 { font-family: Codystar; color: gray; }
 .flash {}
 p {}
-p a {}
+p a , p a  span{
+    color: #517c84;
+}
 header p{ color: #454545; }
 header p a { color: #1BA9A9; text-decoration: none; text-transform: uppercase; font-size: 80%; }
-a {    color: #e0e0e0;}
+a {color: #e0e0e0;text-decoration: blink;}
 p .tubular-mute {}
 .ram {display: none;}
 header{padding: 40px 20px 20px 20px;margin: 0 auto;background: #000000;width: 900px;text-align: center;}
