--- a/css/main.css
+++ b/css/main.css
@@ -12,14 +12,18 @@ p a , p a  span{
     color: #517c84;
 }
 header p{ color: #454545; }
-header p a { color: #1BA9A9; text-decoration: none; text-transform: uppercase; font-size: 80%; }
+header p a {color: #1BA9A9;text-decoration: none;text-transform: uppercase;font-size: 1.2em;}
 a {color: #e0e0e0;text-decoration: blink;}
 p .tubular-mute {}
 .ram {display: none;}
 header{padding: 40px 20px 20px 20px;margin: 0 auto;background: #000000;width: 900px;text-align: center;}
 footer{}
 main{}
-.article{width: 300px;background: #151414;min-height: 300px;margin: 0px 20px 20px 0;border: solid 10px #000000;float: left;border-radius: 2px;}
+.article{
+    border-bottom: solid 1px #333333;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+}
 .article p{color: #464646;font-size: 18px;margin: 10px;font-family: Source Code Pro;}
 .tracks{ padding: 20px; background: #4B4B4B; }
 form{  }
@@ -30,7 +34,7 @@ form .input input{border: none;border-radius: 3px;background: #303030;min-width:
 form .submit{    margin: 20px 0;}
 form .submit input{border: none;background: #1BA9A5;color: #DDFFFE;font-size: 15px;padding: 10px 20px;border-radius: 3px;font-family: monospace;text-transform: uppercase;letter-spacing: 2px;}
 
-.content{margin: 20px auto;max-width: 2000px;}
+.content{margin: 20px auto;max-width: 2000px;padding: 0 20%;}
 .hidden{display:none}
 .content h2{     color: #7B7B7B;     font-weight: 100;     font-family: monospace;     text-transform: uppercase;     letter-spacing: 5px; }
 
