--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@
 body,html{margin:0;padding:0;}
 body{background: #000000;}
 header {}
-header h1 {text-transform: uppercase;color: white;font-weight: lighter;letter-spacing: 45px;font-size: 360%;margin: 30px 0 20px;}
+header h1 {text-transform: uppercase;color: white;font-weight: lighter;letter-spacing: 45px;font-size: 360%;margin: 30px 0 20px;text-indent: 20px;}
 header h2 { font-family: Codystar; color: gray; }
 .flash {}
 p {}
