--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ p a , p a  span{
     color: #517c84;
 }
 header p{ color: #454545; }
-header p a {color: #1BA9A9;text-decoration: none;text-transform: uppercase;font-size: 1.2em;}
+header p a {color: #2bd8f7;text-decoration: none;text-transform: uppercase;font-size: 1.2em;}
 a {color: #e0e0e0;text-decoration: blink;}
 p .tubular-mute {}
 .ram {display: none;}
