--- a/css/main.css
+++ b/css/main.css
@@ -39,3 +39,27 @@ form .submit input{border: none;background: #1BA9A5;color: #DDFFFE;font-size: 15
 .content h2{     color: #7B7B7B;     font-weight: 100;     font-family: monospace;     text-transform: uppercase;     letter-spacing: 5px; }
 
 time{color: #14bbda;}
+.live.pics {display:flex; width:100%;}
+.live.pics div {flex:1; float: left; max-width: 25%; }
+.live.pics div img{width:100%;}
+
+
+header img {
+    /* Start the shake animation and make the animation last for 0.5 seconds */
+    animation: shake 15s;
+    /* When the animation is finished, start again */
+    animation-iteration-count: infinite;
+}
+
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -1px) rotate(-1deg); }
+    20% { transform: translate(-3px, 3px) rotate(1deg); }
+    30% { transform: translate(3px, -3px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 1px) rotate(-1deg); }
+    60% { transform: translate(-3px, 2px) rotate(0deg); }
+    70% { transform: translate(3px, -2px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 1px) rotate(0deg); }
+}
