--- a/css/main.css
+++ b/css/main.css
@@ -1,65 +1,21 @@
 @import url("//fonts.googleapis.com/css?family=Codystar|Source+Code+Pro");
-*{color: #000; font-family:arial; font-weight:normal;}
+*{color: #000; font-family:'Source Code Pro'; font-weight:normal; font-size: 1em; list-style: none; margin:0; padding:0; text-decoration: none;}
 
 body,html{margin:0;padding:0;}
-body{background: #000000;}
-header {}
-header h1 {text-transform: uppercase;color: white;font-weight: lighter;letter-spacing: 45px;font-size: 360%;margin: 30px 0 20px;text-indent: 20px;}
-header h2 { font-family: Codystar; color: gray; }
-.flash {}
-p {}
-p a , p a  span{
-    color: #517c84;
-}
-header p{ color: #454545; }
-header p a {color: #2bd8f7;text-decoration: none;text-transform: uppercase;font-size: 1.2em;}
-a {color: #e0e0e0;text-decoration: blink;}
-p .tubular-mute {}
-.ram {display: none;}
-header{padding: 40px 20px 20px 20px;margin: 0 auto;background: #000000;width: 900px;text-align: center;}
-footer{}
-main{}
-.article{
-    border-bottom: solid 1px #333333;
-    padding-bottom: 30px;
-    margin-bottom: 30px;
-}
-.article p{color: #464646;font-size: 18px;margin: 10px auto 40px;font-family: Source Code Pro;}
-.tracks{ padding: 20px; background: #4B4B4B; }
-form{  }
-form fieldset{border: none;padding: 0;margin: 0;}
-form .input{    margin: 20px 0;}
-form .input label{ font-size: 20px; margin-right: 15px; min-width: 100px; display: inline-block; }
-form .input input{border: none;border-radius: 3px;background: #303030;min-width: 450px;font-size: 12px;padding: 10px;}
-form .submit{    margin: 20px 0;}
-form .submit input{border: none;background: #1BA9A5;color: #DDFFFE;font-size: 15px;padding: 10px 20px;border-radius: 3px;font-family: monospace;text-transform: uppercase;letter-spacing: 2px;}
+body{background: #fff;}
 
-.content{margin: 20px auto;max-width: 2000px;padding: 0 20%;}
-.hidden{display:none}
-.content h2{     color: #7B7B7B;     font-weight: 100;     font-family: monospace;     text-transform: uppercase;     letter-spacing: 5px; }
-
-time{color: #14bbda;}
-.live.pics {display:flex; width:100%;}
-.live.pics div {flex:1; float: left; max-width: 25%; }
-.live.pics div img{width:100%;}
-
-
-header img {
-    /* Start the shake animation and make the animation last for 0.5 seconds */
-    animation: shake 15s;
-    /* When the animation is finished, start again */
-    animation-iteration-count: infinite;
-}
-
-@keyframes shake {
-    0% { transform: translate(1px, 1px) rotate(0deg); }
-    10% { transform: translate(-1px, -1px) rotate(-1deg); }
-    20% { transform: translate(-3px, 3px) rotate(1deg); }
-    30% { transform: translate(3px, -3px) rotate(0deg); }
-    40% { transform: translate(1px, -1px) rotate(1deg); }
-    50% { transform: translate(-1px, 1px) rotate(-1deg); }
-    60% { transform: translate(-3px, 2px) rotate(0deg); }
-    70% { transform: translate(3px, -2px) rotate(-1deg); }
-    80% { transform: translate(-1px, -1px) rotate(1deg); }
-    90% { transform: translate(1px, 1px) rotate(0deg); }
-}
+body { }
+body div { }
+body div#wrapper { margin:3em; max-width: 969px; }
+body div header { margin-bottom:2em; }
+body div header h1 { font-size: 1.5em; }
+body div menu { }
+body div menu ul { }
+body div menu ul li { }
+body div menu ul li a { }
+body div main { margin-top:2em; font-size: 0.9em; }
+body div main h2 { font-size: 1.3em; }
+body div main p { margin-top:1em; }
+body div main p a { }
+body div main .album, body div main .track  { margin-top:1em; max-width: 363px; }
+body div main img { max-width: 100%; }
