--- a/css/main.css
+++ b/css/main.css
@@ -17,5 +17,5 @@ body div main { margin-top:2em; font-size: 0.9em; }
 body div main h2 { font-size: 1.3em; }
 body div main p { margin-top:1em; }
 body div main p a { }
-body div main .album, body div main .track  { margin-top:1em; max-width: 363px; }
+body div main .album, body div main .track  { margin-top:1em; max-width: 363px; float:left; padding-right:2em;}
 body div main img { max-width: 100%; }
