--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,8 @@
 @import url("//fonts.googleapis.com/css?family=Codystar|Source+Code+Pro");
-*{color: #000; font-family:'Source Code Pro'; font-weight:normal; font-size: 1em; list-style: none; margin:0; padding:0; text-decoration: none;}
+*{color: #fff; font-family:'Source Code Pro'; font-weight:normal; font-size: 1.16em; list-style: none; margin:0; padding:0; text-decoration: none;}
 
 body,html{margin:0;padding:0;}
-body{background: #fff;}
+body{background: #000;}
 
 body { }
 body div { }
