--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,4 @@
-@import url("//fonts.googleapis.com/css?family=Codystar|Source+Code+Pro");
-*{color: #fff; font-family:'Source Code Pro'; font-weight:normal; font-size: 1.16em; list-style: none; margin:0; padding:0; text-decoration: none;}
+*{color: #fff; font-family:'Arial'; font-weight:normal; font-size: 5vw; list-style: none; margin:0; padding:0; text-decoration: none;}
 
 body,html{margin:0;padding:0;}
 body{background: #000;}
@@ -8,7 +7,6 @@ body { }
 body div { }
 body div#wrapper { margin:3em; max-width: 969px; }
 body div header { margin-bottom:2em; }
-body div header h1 { font-size: 1.17em; }
 body div menu { }
 body div menu ul { }
 body div menu ul li { }
